<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvSampling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_sampling"/>
            <TextView
                android:id="@+id/tvLeanOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_leadOn"/>
            <TextView
                android:id="@+id/tv_data_sampling_multiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/patch_info_sampling_multiple"/>
            <TextView
                android:id="@+id/tv_data_ecg_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_ecg_frequency"/>
            <TextView
                android:id="@+id/tv_data_acc_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_acc_frequency"/>
            <TextView
                android:id="@+id/tv_leadOffAccEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_leadOffAccEnable"/>
            <TextView
                android:id="@+id/tv_accSamplingEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_accSamplingEnable"/>
            <TextView
                android:id="@+id/tvBaseLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_baselinealgoopen"/>
            <TextView
                android:id="@+id/tvRTSDataSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_rts_data_send"/>
            <TextView
                android:id="@+id/tvRTSDataSaveToFlash"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_rts_data_save_to_flash"/>
            <TextView
                android:id="@+id/tv_rts_enable"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_rts_channel_enable"/>
            <TextView
                android:id="@+id/tv_history_enable"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_flash_channel_enable"/>
            <TextView
                android:id="@+id/tvMode"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_info_mode"/>
            <TextView
                android:id="@+id/tvDataStreamMode"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_data_stream_mode"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_info_status"/>
            <TextView
                android:id="@+id/tvLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_info_level"/>
            <TextView
                android:id="@+id/tvCanOta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_info_can_ota"/>
            <TextView
                android:id="@+id/tvCanSampling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_info_can_sampling"/>
            <TextView
                android:id="@+id/tvCanBleTransmission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_info_can_ble_transmission"/>
            <TextView
                android:id="@+id/tvVoltage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_info_voltage"/>
            <TextView
                android:id="@+id/tvPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_info_percent"/>
            <TextView
                android:id="@+id/tvTemperature"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_info_temperature"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"/>
</LinearLayout>