<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
  <include
      android:id="@+id/toolbar_title"
      layout="@layout/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />

  <ScrollView
      android:layout_below="@+id/toolbar_title"
      android:layout_above="@id/bt_continue"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="5dp"
          >
        <CheckBox
            android:id="@+id/radio_auto_connect_last"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_18"
            android:text="@string/config_auto_connect_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="5dp"
          >
        <CheckBox
            android:id="@+id/radio_auto_connect"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_18"
            android:text="@string/config_auto_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="5dp"
          >
        <CheckBox
            android:id="@+id/radio_log_output"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:text="@string/config_log_output"
            android:textSize="@dimen/text_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="5dp"
          >
        <CheckBox
            android:id="@+id/radio_ecg_sync_clock"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_18"
            android:text="@string/config_ecg_sync_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="5dp"
          >
        <CheckBox
            android:id="@+id/radio_blooddev_read_file"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_18"
            android:text="@string/config_blooddev_read_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="5dp"
          >
        <CheckBox
            android:id="@+id/radio_data_upload"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_data_upload"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_18"
            android:text="@string/config_data_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="5dp"
          >
        <CheckBox
            android:id="@+id/radio_heart_rate"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_18"
            android:text="@string/config_heart_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="5dp"
          >
        <TextView
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_14"
            android:text="@string/config_blood_rtsupload_rate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_blood_rtsupload_rate"
            android:layout_width="100dp"
            android:numeric="decimal"
            android:layout_height="wrap_content"/>
      </LinearLayout>
      <Button
          android:id="@+id/bt_tannotation"
          android:text="旧数据库"
          android:gravity="center"
          android:visibility="gone"
          android:layout_alignParentBottom="true"
          android:textSize="@dimen/text_20"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
    </LinearLayout>
  </ScrollView>



  <Button
      android:id="@+id/bt_continue"
      android:text="@string/config_OK"
      android:layout_centerHorizontal="true"
      android:gravity="center"
      android:layout_alignParentBottom="true"
      android:textSize="@dimen/text_20"
      android:layout_width="200dp"
      android:layout_height="80dp"/>
</RelativeLayout>