<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_new"
    android:orientation="vertical"
    tools:context=".UI.Patient.PrivacyPolicyActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp">


        <RelativeLayout
            android:id="@+id/menu"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/sample_circle">

            <ImageView
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_7sdp"
                android:src="@drawable/arrow_left" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/_10sdp"
            android:text="ECG"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

    </RelativeLayout>
    <include layout="@layout/toolbar"
        android:visibility="gone"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnSwitchDataMode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/btn_bg"
                android:text="@string/str_switch_data_mode"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp" />

            <Button
                android:id="@+id/btnGraphics"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/btn_bg"
                android:text="@string/graphics"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp" />


            <Button
                android:id="@+id/btnDisconnect"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/btn_bg"
                android:text="@string/disconnect"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>